--- a/uppah_0_0_0/pubspec.yaml
+++ b/uppah_0_0_0/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cloud_firestore: ^3.4.7
   firebase_auth: ^3.8.0
 
+  http: ^0.13.5
+
+
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
