--- a/uppah_0_0_0/android/app/src/main/AndroidManifest.xml
+++ b/uppah_0_0_0/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.uppah_0_0_0">
    <application
-        android:label="uppah_0_0_0"
+        android:label="Uppah"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
