--- a/uppah_0_0_0/pubspec.yaml
+++ b/uppah_0_0_0/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   #Firebase Database
   cloud_firestore: ^3.4.7
   firebase_auth: ^3.8.0
+  http: ^0.13.5
+  nfc_manager: ^3.2.0
+  ndef: ^0.3.1
+  flutter_nfc_kit: ^3.3.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
