--- a/uppah_0_0_0/pubspec.yaml
+++ b/uppah_0_0_0/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  flutter_svg: ^0.17.4
   flutter:
     sdk: flutter
   google_nav_bar: ^5.0.6
@@ -40,6 +41,9 @@ dependencies:
   firebase_auth: ^3.8.0
 
   http: ^0.13.5
+
+  #Fonts
+  google_fonts: ^2.0.0
 
 
 dev_dependencies:
@@ -68,10 +72,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  #fonts:
+  #  - family: Quicksand
+  #    fonts:
+  #      - asset: fonts/Quicksand-Bold.ttf
+  #         style: bold
+  #      - asset: fonts/Quicksand-Light.ttf
+  #         style: light
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
