--- a/uppah_0_0_0/android/app/src/main/AndroidManifest.xml
+++ b/uppah_0_0_0/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.uppah_0_0_0">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.NFC_PREFERRED_PLAYMENT_INFO" />
+    <uses-permission android:name="android.permission.NFC_TRANSACTION_EVENT" />
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
+
    <application
         android:label="Uppah"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-
-      
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
