--- a/uppah_0_0_0/pubspec.yaml
+++ b/uppah_0_0_0/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   google_fonts: ^2.0.0
   flutter_nfc_kit: ^3.2.0
   ndef: ^0.3.1
+  nfc_manager: ^3.2.0
+  nfc_in_flutter: ^2.0.5
 
 
 dev_dependencies:
