--- a/uppah_0_0_0/android/app/src/main/AndroidManifest.xml
+++ b/uppah_0_0_0/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.NFC_PREFERRED_PLAYMENT_INFO" />
     <uses-permission android:name="android.permission.NFC_TRANSACTION_EVENT" />
-    <uses-feature android:name="android.hardware.nfc" android:required="true" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-feature android:name="android.hardware.nfc" android:required="true" /> 
 
    <application
         android:label="Uppah"
