--- a/uppah_0_0_0/pubspec.yaml
+++ b/uppah_0_0_0/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   google_nav_bar: ^5.0.6
   rflutter_alert: ^2.0.4
+  
 
   #Firebase Database
   cloud_firestore: ^3.4.7
@@ -50,7 +51,10 @@ dependencies:
   google_fonts: ^2.0.0
   
   ndef: ^0.3.1
+  flutter_nfc_kit: ^3.3.1
   nfc_manager: ^3.2.0
+  vibration: ^1.7.6
+  
 
 
 
